# iolite

./: .gitignore  Cargo.toml  README.md  build.rs  character.json  start_game_script.rs
.cargo/: config.toml
blowfish/: blowfish.cpp  blowfish.h  wrapper.cpp  wrapper.h
src/: game_packet_parser.rs  handle_lobby_packet.rs  handle_packets.rs  main.rs  packet_transfer.rs
src/blowfish/: blowfish.cpp  blowfish.h  blowfish_consts.h  constants.rs  mod.rs  wrapper.cpp  wrapper.h
src/common/: mod.rs  packet_transfer.rs  packets.rs
src/lobby/: handle_lobby_packet.rs  handle_packets.rs  lobby_server.rs  mod.rs
src/structs/: common.rs  lobby_structs.rs  mod.rs  world_structs.rs  zone_ipc_def.rs
src/world/: handle_zone_packets.rs  mod.rs  oodle.rs  world_packets.rs  world_server.rs
