[package]
name = "iolite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binary-layout = "4.0.2"
bytes = "1.6.0"
cc = "1.0"
deku = "0.16.0"
libc = "0.2.153"
md5 = "0.7.0"
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["full"] }

[dev-dependencies.cargo-husky]
version = "1.5.0"
default-features = false
features = ["precommit-hook", "run-cargo-clippy", "run-cargo-fmt"]

[build-dependencies]
cc = "1.0"
